[package]
name = "ipse-miner"
version = "0.1.0"
authors = ["Lawliet-Chan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.32.0-rc1"
ipfs-api = "0.7.2"
rocket = "0.4.5"
clap = "3.0.0-beta.1"
async-std = "1.2.0"
