[package]
name = "ipse-miner"
version = "0.1.0"
authors = ["Lawliet-Chan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipfs-api = "0.7.2"
rocket = "0.4.5"
clap = "3.0.0-beta.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
async-std = "1.2.0"
lazy_static = "1.4.0"
substrate-subxt = "0.6.0"
triehash = "0.8.3"
keccak-hasher = "0.15.2"
rusqlite = { version = "0.21.0", features = ["bundled"] }
http = "0.2.1"

sp-keyring = { version = "2.0.0-alpha.5", package = "sp-keyring" }
frame-support = { version = "2.0.0-alpha.4", package = "frame-support" }
frame-system = { version = "2.0.0-alpha.4", package = "frame-system" }
sp-core = { version = "2.0.0-alpha.5", package = "sp-core" }
sp-runtime = { version = "2.0.0-alpha.5", package = "sp-runtime" }
sub-runtime = { git = "https://github.com/IPSE-TEAM/ipse-core", package = "node-runtime", version = "2.0.0-alpha.4", branch = "ipse"}
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive", "full"] }
